# coregtor

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: doc.yml  publish.yml
docs/: api.rst  biology.md  conf.py  exp.ipynb  index.rst  maths.md  pipeline.md  run_exp.ipynb  start.md  tutorial1.ipynb
src/coregtor/: __init__.py  _clusters.py  _expression.py  _forest.py  cli.py  clusters.py  config.py  context.py  dataset.py  forest.py  pipeline.py
src/coregtor/figure/: __init__.py
src/coregtor/utils/: __init__.py  error.py  exp.py  plot.py  validation.py
src/coregtor/validation/: __init__.py  ppi.py  trdb.py
tests/: sample_config.json  test1.py  test2.py  test_sim_matrix.csv
