[project]
name = "coregtor"
version = "0.1.1"
description = "A tool to predict transcription co-regulators for a gene from gene expression data using random forest methods"
authors = [{name = "Shubh Vardhan Jain", email = "shubhvjain@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn (>=1.7.2,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
myst-nb = "^1.3.0"
jupyter = "^1.1.1"
sphinx-autodoc-typehints = "^3.5.1"
sphinx-book-theme = "^1.1.4"

